--- a/EconomicTracking/App.xaml
+++ b/EconomicTracking/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="EconomicTracking.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml" DispatcherUnhandledException="Application_DispatcherUnhandledException" >
+             DispatcherUnhandledException="Application_DispatcherUnhandledException" 
+             ShutdownMode="OnExplicitShutdown"
+             >
     <Application.Resources>
          
     </Application.Resources>
