--- a/EconomicTracking/Recovery.xaml
+++ b/EconomicTracking/Recovery.xaml
@@ -5,6 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="470.4" d:DesignWidth="777">
+    <UserControl.Resources>
+        <Style x:Key="myHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Visibility" Value="Collapsed" />
+        </Style>
+    </UserControl.Resources>
     <DockPanel  Background="{DynamicResource {x:Static SystemColors.GradientActiveCaptionBrushKey}}">
         <Grid DockPanel.Dock="Top"  Height="189" RenderTransformOrigin="0.491,-1.662" Margin="0,0,-1.2,0" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
@@ -14,18 +19,22 @@
             <Label Content="CustomerName" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="122"/>
             <Label Content="CustomerAssembly" Height="26" VerticalAlignment="Top" Margin="132,10,20.6,0"></Label>
             <ComboBox x:Name="Custcombo" HorizontalAlignment="Left" Margin="0,41,0,0" VerticalAlignment="Top" Width="130" Loaded="Custcombo_Loaded" SelectionChanged="Custcombo_SelectionChanged"/>
-            <ListView SelectionMode="Multiple" ItemsSource="{Binding}" x:Name="lstcusass" HorizontalAlignment="Left" Height="96" Margin="135,41,0,0" VerticalAlignment="Top" Width="148" Grid.ColumnSpan="2">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <VirtualizingStackPanel>
-                            <CheckBox x:Name="chkcus" Content="{Binding Path=CustomerAssemblyId}" Loaded="chkcus_Loaded" Checked="chkcus_Checked"  Unchecked="chkcus_Unchecked"></CheckBox>
-                        </VirtualizingStackPanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-                <ListBox.Items>
-                </ListBox.Items>
+
+            <ListView  Grid.ColumnSpan="2" Margin="137,30,501.6,52" Name="lstcusass">
+                <ListView.View>
+                    <GridView ColumnHeaderContainerStyle="{StaticResource myHeaderStyle}" >
+                        <GridViewColumn>
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <CheckBox Name="Cuscheck"  IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}"  Content="{Binding Path=CustAssyNo}" Checked="chkcus_Checked"  Unchecked="chkcus_Unchecked"></CheckBox>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+
+                </ListView.View>
             </ListView>
-            <CheckBox x:Name="CusAssSelectAllchk" Content="SelectAll" HorizontalAlignment="Left" Margin="135,137,0,0" VerticalAlignment="Top" Checked="CusAssSelectAllchk_Checked"/>
+            <CheckBox x:Name="CusAssSelectAllchk" Content="SelectAll" HorizontalAlignment="Left" Margin="135,137,0,0" VerticalAlignment="Top" Checked="CusAssSelectAllchk_Checked" Unchecked="CusAssSelectAllchk_Unchecked"/>
             <Label Content="SetRef" Height="31" VerticalAlignment="Top" Margin="56.4,15,389,0" Grid.Column="1"/>
             <ComboBox x:Name="setref1" HorizontalAlignment="Left" Margin="56.4,51,0,0" VerticalAlignment="Top" Width="120" Loaded="setref1_Loaded" SelectionChanged="setref1_SelectionChanged" RenderTransformOrigin="-0.096,1.266" Grid.Column="1"/>
 
@@ -44,7 +53,7 @@
             <Label x:Name="setreflb2" HorizontalAlignment="Left" Margin="202.4,116,0,0" VerticalAlignment="Top" Width="120" Height="29" Grid.Column="1"/>
         </Grid>
         <GroupBox x:Name="salesqtygroup"  Margin="10,7.2,10,86.4" >
-            <DataGrid x:Name="salesqtydatagrid" HorizontalAlignment="Left" VerticalAlignment="Top" EnableRowVirtualization="False" ColumnWidth="*" Margin="0,0,-2,0" Width="752" Height="242" />
+            <DataGrid x:Name="salesqtydatagrid" HorizontalAlignment="Left" VerticalAlignment="Top" EnableRowVirtualization="False" ColumnWidth="*" Margin="0,0,-2,0" Width="752" Height="242" CanUserAddRows="False" IsReadOnly="True"></DataGrid>
         </GroupBox>
 
 
